fix: small adjustments
